# rebop

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-plz.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  README.tpl  index.md  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml  pre-commit.yml  release-plz.yml  rust.yml
benches/: iai.rs  my_benchmark.rs
benches/vilar/: README.md  plot.py  vilar.bngl  vilar.csv  vilar.jl  vilar.ka  vilar.py  vilar.rs  vilar_cayenne.py  vilar_gillespy2.py
docs/: api.md  index.md
examples/: dimers.rs  edda.rs  mm.py  sir.py  sir.rs
python/rebop/: __init__.py  gillespie.py  rebop.pyi
src/: expr.rs  gillespie.rs  gillespie_macro.rs  lib.rs  main.rs  pyo3_gillespie.rs
tests/: __init__.py  test_rebop.py
