[package]
name = "rebop"
version = "0.9.4"
authors = ["Virgile Andreani <armavica@ulminfo.fr>"]
edition = "2024"
license = "MIT"
categories = ["algorithms", "mathematics", "science", "simulation"]
homepage = "https://armavica.github.io/rebop/"
repository = "https://github.com/Armavica/rebop/"
description = "A fast stochastic simulator for chemical reaction networks"
keywords = ["gillespie-algorithm", "systems-biology", "stochastic", "scientific-computing"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true }
rand = "0.9.2"
rand_distr = "0.5.1"
winnow = "0.7.13"

[features]
pyo3 = ["dep:pyo3"]
abi3 = ["pyo3/abi3-py312", "generate-import-lib"]
generate-import-lib = ["pyo3/generate-import-lib"]

[dev-dependencies]
criterion = "0.7.0"
iai-callgrind = "0.16.1"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]
bench = false

[[bin]]
name = "vilar"
path = "benches/vilar/vilar.rs"
bench = false

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "iai"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.iai]
inherits = "release"
debug = true
