[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "rebop.rebop"

[project]
name = "rebop"
dependencies = ["xarray >= 2023.01"]

[tool.ruff]
extend-exclude = ["benches/*"]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Incompatible with ruff-format
  "ISC001",  # Incompatible with ruff-format
  "RET504",  # Unnecessary asignment before return
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["INP001"]
"examples/sir.py" = ["T201"]
"python/rebop/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
