[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rebop"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["xarray >= 2023.01"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"
module-name = "rebop.rebop"
features = ["pyo3/extension-module"]

[tool.ruff]
extend-exclude = ["benches/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Incompatible with ruff-format
  "ISC001",  # Incompatible with ruff-format
  "RET504",  # Unnecessary asignment before return
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["D", "S101", "PLR2004", "ANN201"]
"examples/*" = ["INP001"]
"examples/sir.py" = ["T201"]
"python/rebop/__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
